@@ -20,29 +20,15 @@
 */
 
 /**
- *  \file SDL_test.h
+ *  \file SDL_test_memory.h
  *
  *  Include file for SDL test framework.
  *
  *  This code is a part of the SDL2_test library, not the main SDL library.
  */
 
-#ifndef SDL_test_h_
-#define SDL_test_h_
-
-#include "SDL.h"
-#include "SDL_test_assert.h"
-#include "SDL_test_common.h"
-#include "SDL_test_compare.h"
-#include "SDL_test_crc32.h"
-#include "SDL_test_font.h"
-#include "SDL_test_fuzzer.h"
-#include "SDL_test_harness.h"
-#include "SDL_test_images.h"
-#include "SDL_test_log.h"
-#include "SDL_test_md5.h"
-#include "SDL_test_memory.h"
-#include "SDL_test_random.h"
+#ifndef SDL_test_memory_h_
+#define SDL_test_memory_h_
 
 #include "begin_code.h"
 /* Set up for C function definitions, even when using C++ */
@@ -50,13 +36,21 @@
 extern "C" {
 #endif
 
-/* Global definitions */
 
-/*
- * Note: Maximum size of SDLTest log message is less than SDL's limit
- * to ensure we can fit additional information such as the timestamp.
+/**
+ * \brief Start tracking SDL memory allocations
+ * 
+ * \note This should be called before any other SDL functions for complete tracking coverage
  */
-#define SDLTEST_MAX_LOGMESSAGE_LENGTH   3584
+int SDLTest_TrackAllocations();
+
+/**
+ * \brief Print a log of any outstanding allocations
+ *
+ * \note This can be called after SDL_Quit()
+ */
+void SDLTest_LogAllocations();
+
 
 /* Ends C function definitions when using C++ */
 #ifdef __cplusplus
@@ -64,6 +58,6 @@ extern "C" {
 #endif
 #include "close_code.h"
 
-#endif /* SDL_test_h_ */
+#endif /* SDL_test_memory_h_ */
 
 /* vi: set ts=4 sw=4 expandtab: */
